--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Shane Website V1.zip
 Shane Website V1/.DS_Store
 Shane Website V1/.idea/workspace.xml
 Shane Website V1/code/.idea/workspace.xml
+.DS_Store
